[gd_scene format=3 uid="uid://dice1e7tigbs"]

[ext_resource type="Texture2D" uid="uid://c4u8thw8yr7tb" path="res://assets/gun/pistol.png" id="1_1ohd4"]
[ext_resource type="Script" uid="uid://ci8wuqf631gg" path="res://weapons/pistol.gd" id="1_5icxk"]
[ext_resource type="Texture2D" uid="uid://d26m7afe060in" path="res://assets/gun/laser_gun.png" id="3_ds5a7"]
[ext_resource type="Texture2D" uid="uid://dg81etljyx2kh" path="res://assets/gun/shotgun.png" id="3_fcwqf"]
[ext_resource type="Texture2D" uid="uid://dhtdalf371qrk" path="res://assets/gun/machine_gun.png" id="5_72fyo"]
[ext_resource type="Texture2D" uid="uid://cc7f3jd3qqdha" path="res://assets/gun/uzi.png" id="5_qvlev"]
[ext_resource type="Texture2D" uid="uid://tlgteujpyaqe" path="res://assets/gun/mini_gun.png" id="7_2v7i3"]
[ext_resource type="Texture2D" uid="uid://bmss0jpsjuvbp" path="res://assets/misc/corshair.png" id="7_ferxg"]
[ext_resource type="Texture2D" uid="uid://bsj8n0hups2os" path="res://assets/gun/rocket_launcher.png" id="8_7j482"]

[sub_resource type="Animation" id="Animation_icjny"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("gun_sprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("gun_sprites:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_tkml6"]
resource_name = "gun_shot"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("gun_sprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666666),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-3, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ferxg"]
resource_name = "reload"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("gun_sprites:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.17, 0.37, 0.46),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -1.5707964, -1.5707964, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("gun_sprites:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.17, 0.26, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 5), Vector2(0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.16666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_reload_sound"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qvlev"]
_data = {
&"RESET": SubResource("Animation_icjny"),
&"gun_shot": SubResource("Animation_tkml6"),
&"reload": SubResource("Animation_ferxg")
}

[node name="Pistol" type="Node2D" unique_id=1774843862]
script = ExtResource("1_5icxk")

[node name="gun_sprites" type="Node2D" parent="." unique_id=262051761]

[node name="spr_gun" type="Sprite2D" parent="gun_sprites" unique_id=550428304]
position = Vector2(4, 0)
texture = ExtResource("1_1ohd4")

[node name="spr_laser" type="Sprite2D" parent="gun_sprites" unique_id=641462324]
position = Vector2(4, 1)
texture = ExtResource("3_ds5a7")

[node name="spr_shot_gun" type="Sprite2D" parent="gun_sprites" unique_id=1619864641]
position = Vector2(7, 0)
texture = ExtResource("3_fcwqf")

[node name="spr_uzi" type="Sprite2D" parent="gun_sprites" unique_id=723100958]
position = Vector2(2, 3)
texture = ExtResource("5_qvlev")

[node name="spr_machine_gun" type="Sprite2D" parent="gun_sprites" unique_id=1600527118]
position = Vector2(4, 2)
texture = ExtResource("5_72fyo")

[node name="spr_mini_gun" type="Sprite2D" parent="gun_sprites" unique_id=1403994427]
position = Vector2(9, -1)
texture = ExtResource("7_2v7i3")

[node name="spr_rocket_launcher" type="Sprite2D" parent="gun_sprites" unique_id=547427132]
position = Vector2(2, 0)
texture = ExtResource("8_7j482")

[node name="mrk_aimer" type="Marker2D" parent="gun_sprites" unique_id=803526560]
position = Vector2(48, -2)

[node name="Corshair" type="Sprite2D" parent="gun_sprites/mrk_aimer" unique_id=326567580]
texture = ExtResource("7_ferxg")

[node name="mkr_fire_position" type="Marker2D" parent="." unique_id=1586169308]

[node name="tmr_shot_delay" type="Timer" parent="." unique_id=541266115]

[node name="tmr_reload_sound" type="Timer" parent="." unique_id=557855629]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1945871618]
libraries/ = SubResource("AnimationLibrary_qvlev")

[connection signal="timeout" from="tmr_shot_delay" to="." method="_on_tmr_shot_delay_timeout"]
[connection signal="timeout" from="tmr_reload_sound" to="." method="_on_tmr_reload_sound_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
